# BraveDD_archive

./: .gitignore  CMakeLists.txt  README.md  build.sh  kissat_output.txt  petri-net.txt  satFunctionForQRBDDtoDFA.txt  satFunctionForQRBDDtoDFALatex.txt
OldChess/: README.md  Readme.md
OldChess/bdd/: alg_osm.cc  bdd.h  buffer.cc  build_bdd.cc  fixed_dd.cc  fixed_dd.h  parser.cc  parser.h  read_bdd.cc  read_bdds.cc  resolv.h  test_query.cc
OldChess/data/2-piece/: K_vs_k.bin.xz  K_vs_k.f.pla  K_vs_k.f.pla.xz
OldChess/data/3-piece/: KB_vs_k.bin.xz  KB_vs_k.f.pla.xz  KN_vs_k.bin.xz  KN_vs_k.f.pla.xz  KP_vs_k.bin.xz  KP_vs_k.f.pla.xz  KQ_vs_k.bin.xz  KQ_vs_k.f.pla.xz  KR_vs_k.bin.xz  KR_vs_k.f.pla.xz
OldChess/data/4-piece/: KBB_vs_k.bin.xz  KBB_vs_k.f.pla.xz  KBN_vs_k.bin.xz  KBN_vs_k.f.pla.xz  KBP_vs_k.bin.xz  KBP_vs_k.f.pla.xz  KB_vs_kb.bin.xz  KB_vs_kb.f.pla.xz  KB_vs_kn.bin.xz  KB_vs_kn.f.pla.xz  KB_vs_kp.bin.xz  KB_vs_kp.f.pla.xz  KNN_vs_k.bin.xz  KNN_vs_k.f.pla.xz  KNP_vs_k.bin.xz  KNP_vs_k.f.pla.xz  KN_vs_kn.bin.xz  KN_vs_kn.f.pla.xz  KN_vs_kp.bin.xz  KN_vs_kp.f.pla.xz  KPP_vs_k.bin.xz  KPP_vs_k.f.pla.xz  KP_vs_kp.bin.xz  KP_vs_kp.f.pla.xz  KQB_vs_k.bin.xz  KQB_vs_k.f.pla.xz  KQN_vs_k.bin.xz  KQN_vs_k.f.pla.xz  KQP_vs_k.bin.xz  KQP_vs_k.f.pla.xz  KQQ_vs_k.bin.xz  KQQ_vs_k.f.pla.xz  KQR_vs_k.bin.xz  KQR_vs_k.f.pla.xz  KQ_vs_kb.bin.xz  KQ_vs_kb.f.pla.xz  KQ_vs_kn.bin.xz  KQ_vs_kn.f.pla.xz  KQ_vs_kp.bin.xz  KQ_vs_kp.f.pla.xz  (+20 more)
OldChess/evbdd/: README.txt  alg_osm.cc  alg_restr.cc  bdd.cc  buffer.cc  buffer.h  build_bdd  buildbdd  exception_neutral_macros.cpp  fixed_dd.cc  fixed_dd.h  operation.cc  parser.cc  read_bdd.cc  read_bdds  test_query.cc
OldChess/evmbdd/: Makefile  alg_restr.cc  alg_tsm.cc  bdd.cc  bdd.h  build_bdd.cc  fixed_dd.cc  fixed_dd.h  operation.h  read_bdd  read_bdd.cc  read_bdds.cc  switches.h  test_parser.cc  test_query.cc
OldChess/results/evbdd/: KBB_vs_k.bin.xz.txt  KBN_vs_k.bin.xz.txt  KBP_vs_k.bin.xz.txt  KB_vs_kb.bin.xz.txt  KB_vs_kn.bin.xz.txt  KB_vs_kp.bin.xz.txt  KNN_vs_k.bin.xz.txt  KNP_vs_k.bin.xz.txt  KN_vs_kn.bin.xz.txt  KN_vs_kp.bin.xz.txt  KPP_vs_k.bin.xz.txt  KP_vs_kp.bin.xz.txt  KQB_vs_k.bin.xz.txt  KQN_vs_k.bin.xz.txt  KQP_vs_k.bin.xz.txt  KQQ_vs_k.bin.xz.txt  KQR_vs_k.bin.xz.txt  KQ_vs_kb.bin.xz.txt  KQ_vs_kn.bin.xz.txt  KQ_vs_kp.bin.xz.txt  KQ_vs_kq.bin.xz.txt  KQ_vs_kr.bin.xz.txt  KRB_vs_k.bin.xz.txt  KRN_vs_k.bin.xz.txt  KRP_vs_k.bin.xz.txt  KRR_vs_k.bin.xz.txt  KR_vs_kb.bin.xz.txt  KR_vs_kn.bin.xz.txt  KR_vs_kr.bin.xz.txt  SKBB_vs_k.bin.xz.txt  SKBN_vs_k.bin.xz.txt  SKBP_vs_k.bin.xz.txt  SKB_vs_kb.bin.xz.txt  SKB_vs_kn.bin.xz.txt  SKB_vs_kp.bin.xz.txt  SKNN_vs_k.bin.xz.txt  SKNP_vs_k.bin.xz.txt  SKN_vs_kn.bin.xz.txt  SKN_vs_kp.bin.xz.txt  SKPP_vs_k.bin.xz.txt  (+19 more)
OldChess/results/evmbdd/: KBB_vs_k.bin.xz.txt  KBN_vs_k.bin.xz.txt  KBP_vs_k.bin.xz.txt  KB_vs_kb.bin.xz.txt  KB_vs_kn.bin.xz.txt  KB_vs_kp.bin.xz.txt  KNN_vs_k.bin.xz.txt  KNP_vs_k.bin.xz.txt  KN_vs_kn.bin.xz.txt  KN_vs_kp.bin.xz.txt  KPP_vs_k.bin.xz.txt  KP_vs_kp.bin.xz.txt  KQB_vs_k.bin.xz.txt  KQN_vs_k.bin.xz.txt  KQP_vs_k.bin.xz.txt  KQQ_vs_k.bin.xz.txt  KQR_vs_k.bin.xz.txt  KQ_vs_kb.bin.xz.txt  KQ_vs_kn.bin.xz.txt  KQ_vs_kp.bin.xz.txt  KQ_vs_kq.bin.xz.txt  KQ_vs_kr.bin.xz.txt  KRB_vs_k.bin.xz.txt  KRN_vs_k.bin.xz.txt  KRP_vs_k.bin.xz.txt  KRR_vs_k.bin.xz.txt  KR_vs_kb.bin.xz.txt  KR_vs_kn.bin.xz.txt  KR_vs_kr.bin.xz.txt  SKBB_vs_k.bin.xz.txt  SKBN_vs_k.bin.xz.txt  SKBP_vs_k.bin.xz.txt  SKB_vs_kb.bin.xz.txt  SKB_vs_kn.bin.xz.txt  SKB_vs_kp.bin.xz.txt  (+24 more)
OldChess/src_bdd/: .gitignore  alg_restr.cc  alg_tsm.cc  bdd.cc  buffer.h  operation.h  parser.cc  resolv.cc  switches.cc  test_query
OldChess/src_evbdd/: alg_tsm.cc  bdd.h  build_bdd.cc  ct.cc  exception_neutral_macros.hpp  operation.h  read_bdd  switches.h
OldChess/src_evmbdd/: alg_osm.cc  buffer.h  build_bdd  buildbdd  ct.h  read_bdds  resolv.h  switches.cc  test_parser
bddx-syntax/: README.md  package.json
bddx-syntax/syntaxes/: bddx.tmLanguage.json
developers/: README
doxygen/: Doxyfile  Makefile  README.md
examples/: 00_hello_world.cc  01_logic_expression.cc  02_queens.cc  03_queens_cover.cc  04_sliding_puzzle.cc  04a_sliding_puzzle.cc  04b_sliding_puzzle.cc  05_dining_philosophers.cc  06_bddx_IO.cc  CMakeLists.txt  Fibonacci_fast.h  README  buildBDD.cc  chessEGT.cc  example_0.cc  petri-net.cc  queens.cc  sliding_puzzle.cc  sliding_puzzle_bits.cc  timer.h  transform_file_example.bddx
examples/BDDToDFA/: CMakeLists.txt  Variable.cc  Variable.h  qRBDDToBoolForDFA.cc
src/: CMakeLists.txt  brave_dd.h  brave_helpers.cc  brave_helpers.h  defines.h  edge.cc  edge.h  edge_label.cc  edge_label.h  error.cc  error.h  explict_func.h  forest.cc  forest.h  function.cc  function.h  hash_stream.h  helpers.cc  helpers.h  io.cc  io.h  lib_manager.cc  lib_manager.h  node.cc  node.h  node_manager.cc  node_manager.h  node_storage.h  operations_builtin.cc  operations_builtin.h  operators.cc  operators.h  packed_node.cc  packed_node.h  parser.cc  parser.h  reductions.h  setting.cc  setting.h  statistics.cc  (+4 more)
src/IO/: lexer.cc  lexer.h  out_bddx.cc  out_bddx.h  out_dot.cc  out_dot.h  parser.cc  parser.h  tokens.h
src/operations/: apply.h  binary.cc  binary.h  builtin.cc  builtin.h  compute_table.cc  compute_table.h  numerical.cc  numerical.h  operation.cc  operation.h  operations_generator.cc  operations_generator.h  saturation.cc  saturation.h  unary.h
src/settings/: edge_flags.cc  edge_flags.h  range.cc  range.h  reductions.cc  reductions.h
tests/: 00_test_setting.cc  01_test_node.cc  04_test_reduce.cc  05_test_operation.cc  06_test_image.cc  07_test_card.cc  08_test_parser.cc  10_test_partial_func.cc  11_test_read_bddx.cc  CMakeLists.txt  README  check_edge.cc  gen_random_functions.h  print_function.cc  test_0.cc  test_apply_ubdd.cc  test_card.cc  test_convert.cc  test_edge_value_plus.cc  test_function.cc  test_image.cc  test_node.cc  test_node_manager.cc  test_operation.cc  test_parser.cc  test_partial_function.cc  test_reduce.cc  test_reduce_ubdd.cc  test_setting.cc  test_unionassignment.cc  test_unique_table.cc
(+106 files in other folders)
